--- a/Front/src/app/dashboard/datosreferenciacom/datosreferenciacom.component.html
+++ b/Front/src/app/dashboard/datosreferenciacom/datosreferenciacom.component.html
@@ -17,7 +17,7 @@
 
             <hr>
             <div>
-              <h3 class="title"> Referencias Familiares</h3>
+              <h3 class="title"> Referencias Comerciales</h3>
             </div>
             <hr>
             <h6> Primera Referencia</h6>
@@ -35,13 +35,13 @@
                 </mat-error>
               </mat-form-field>
 
-              <!-- Parentezco1 -->
+              <!-- Empresa1 -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Parentezco</mat-label>
-                <input matInput formControlName="parentezco1" type="text"
+                <mat-label>Empresa</mat-label>
+                <input matInput formControlName="empresa1" type="text"
                   class="form-control">
-                <mat-error *ngIf="campoEsValido('parentezco1')">
-                  {{getError('parentezco1')}}
+                <mat-error *ngIf="campoEsValido('empresa1')">
+                  {{getError('empresa1')}}
                 </mat-error>
               </mat-form-field>
 
@@ -89,13 +89,13 @@
                 </mat-error>
               </mat-form-field>
 
-              <!-- Parentezco2 -->
+              <!-- Empresa2 -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Parentezco</mat-label>
-                <input matInput formControlName="parentezco2" type="text"
+                <mat-label>Empresa</mat-label>
+                <input matInput formControlName="empresa2" type="text"
                   class="form-control">
-                <mat-error *ngIf="campoEsValido('parentezco2')">
-                  {{getError('parentezco2')}}
+                <mat-error *ngIf="campoEsValido('empresa2')">
+                  {{getError('empresa2')}}
                 </mat-error>
               </mat-form-field>
 
@@ -143,13 +143,13 @@
                 </mat-error>
               </mat-form-field>
 
-              <!-- Parentezco3 -->
+              <!-- Empresa3 -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Parentezco</mat-label>
-                <input matInput formControlName="parentezco3" type="text"
+                <mat-label>Empresa</mat-label>
+                <input matInput formControlName="empresa3" type="text"
                   class="form-control">
-                <mat-error *ngIf="campoEsValido('parentezco3')">
-                  {{getError('parentezco3')}}
+                <mat-error *ngIf="campoEsValido('empresa3')">
+                  {{getError('empresa3')}}
                 </mat-error>
               </mat-form-field>
 
